--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Shoplists</title>
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/shopping-cart.svg" />
   </head>
   <body>
     <div id="root"></div>
